--- a/CrosswordsCRI/CrosswordsCRI.vcxproj.filters
+++ b/CrosswordsCRI/CrosswordsCRI.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="CrosswordDeckCell.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="CrosswordDictionary.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CrosswordDeckFileReader.h">
@@ -42,6 +45,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="CrosswordDeckCell.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="CrosswordDictionary.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
