--- a/CrosswordsCRI/CrosswordsCRI.vcxproj.filters
+++ b/CrosswordsCRI/CrosswordsCRI.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="CrosswordDictionary.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="CrosswordSolver.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CrosswordDeckFileReader.h">
@@ -48,6 +51,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="CrosswordDictionary.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="CrosswordSolver.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
